tests/ui/struct_wrong_context.stderr
error: context type `ObjectContext` does not match the `#[service]` service kind; expected Context
 --> tests/ui/struct_wrong_context.rs:9:33
  |
9 |     async fn greet(&self, _ctx: ObjectContext<'_>, name: String) -> HandlerResult<String> {
  |                                 ^^^^^^^^^^^^^^^^^

warning: unused import: `restate_sdk::prelude::*`
 --> tests/ui/struct_wrong_context.rs:1:5
  |
1 | use restate_sdk::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
